let's use a better image

--- a/regional-index.html
+++ b/regional-index.html
@@ -5,7 +5,7 @@ event-date: "March 19-21"
 event-year: "2015"
 location-ntrl: "France A. Cordova Recreational Sports Center"
 location: "355 S Martin Jischke Dr, West Lafayette, IN 47907"
-image: "crossroads-2014.jpg"
+image: "crossroads-2014-1.jpg"
 contact: ""
 ---
 <section id="about" class="primary-section">
