--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Purdue FIRST Programs"
 mission-title: "Mission Statement"
 mission-summary: "Purdue FIRST Programs inspires in youth and their communities an appreciation of science and technology, while developing life skills, passion, and leadership through mentoring and hands-on activities that provide opportunities for personal growth."
 image: "crossroads-2014.jpg"
-contact: ""
+contact: "president@purduefirst.org"
 ---
 <section id="about" class="primary-section">
 	<div class="container">
