--- a/regional-index.html
+++ b/regional-index.html
@@ -37,22 +37,22 @@ contact: ""
 	<div class="container">
 		<h1>Media</h1>
 		<hr>
-		<div class="grid-container">
-			<div class="column-two med-column-three sm-column-six">
+		<div id="item-grid" data-columns>
+			<div>
 				<div class="item-box item-accent-one">
 					<div class="item-container ">
 						<h1>Facebook</h1>
 					</div>
 				</div>
 			</div>
-			<div class="column-two med-column-three sm-column-six">
+			<div>
 				<div class="item-box item-accent-two">
 					<div class="item-container ">
 						<h1>Livestream</h1>
 					</div>
 				</div>
 			</div>
-			<div class="column-two med-column-three sm-column-six">
+			<div>
 				<div class="item-box item-accent-three">
 					<div class="item-container ">
 						<h1>Photos</h1>
