--- a/404.html
+++ b/404.html
@@ -3,9 +3,12 @@ layout: medium-image
 title: "404"
 dark: true
 permalink: /404.html
+contact: president
 ---
 <section class="primary-section">
 	<div class="container">
 		<h1 style="font-size: 4em;">404</h1>
+		<h2 style="font-size: 2em;">Page not found.</h2>
+		<p>But there are some pretty cool pages you should check out in the navbar. ;)</p>
 	</div>
 </section>
