--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@ contact: "president@purduefirst.org"
 		<hr class="medium-hr">
 		<br />
 		<p>Purdue FIRST Programs (PFP) is a student organization and class that is based at Purdue University in West Lafayette, Indiana. It is a group composed of approximately 90 students who work together to support the mission and vision of FIRST, primarily through mentoring students in the surrounding Lafayette and West Lafayette communities.</p>
-		<p>Currently, Purdue FIRST Programs supports 20 elementary and middle school First Lego League teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a First Tech Challenge competition, a spring competition for First Lego League teams, and the Boilermaker Regional Competition for FIRST Robotics Competition teams. In addition, PFP also participates in other outreach events throughout the year on campus and in the community.</p>
+		<p>Currently, Purdue FIRST Programs supports almost 30 elementary and middle school First Lego League and First Tech Chanllenge teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a First Tech Challenge competition, a spring competition for First Lego League teams, and the Boilermaker Regional Competition for FIRST Robotics Competition teams. In addition, PFP also participates in other outreach events throughout the year on campus and in the community.</p>
 	</div>
 </section>
 <section id="our-teams" class="secondary-section">
 	<div class="container">
 		<h1>Leadership Class</h1>
+		<hr class="medium-hr">
+		<br />
+		<p>Our FIRST Leadership class promotes and develops leadership skills for college students in an engaging, hands-on way. We have various team building activities that highlight the challenges of working in a group but also the benefits of having an effective leader. We have professors from departments across Purdue come to class and speak on what it means to be a leader to them. The professors share their wealth of knowledge and encourage us to continue to mentor and engage students in STEM.</p>
 	</div>
 </section>
