add image to 404 page (whoops)

--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@ layout: medium-image
 title: "404"
 dark: true
 permalink: /404.html
+image: crossroads-2014-2.jpg
 contact: president
 ---
 <section class="primary-section">
