get (lol) ready for this killer ftc event

--- a/ftc-state.html
+++ b/ftc-state.html
@@ -1,5 +1,6 @@
 ---
 layout: event-image
+image: ftc-event.jpg
 title: "FTC Indiana State Championship"
 event-date: "February 20"
 event-year: "2016"
