added sponsor section

--- a/ftc-state.html
+++ b/ftc-state.html
@@ -30,3 +30,19 @@ contact: "graham75@purdue.edu"
 		<img class="floatless" src="img/FTCState2015Parking.png">
 	</div>
 </section>
+<section id="agenda" class="primary-section">
+	<div class="container">
+		<h1>Agenda</h1>
+		<hr />
+		<br />
+		TBA
+	</div>
+</section>
+<section id="sponsor" class="secondary-section">
+	<div class="container">
+		<h1>Sponsor</h1>
+		<hr />
+		<br />
+		<a href="{{ "/" | prepend: site.baseurl}}"><img class="sponsor-logo" src="img/pfp_logo.svg"></a>
+	</div>
+</section>
