--- a/ftc-state.html
+++ b/ftc-state.html
@@ -15,7 +15,15 @@ contact: "graham75@purdue.edu"
 		<p>Each year FIRST Tech Challenge releases a challenge, which is based on a real-world challenge. This year's challenge is Res-Q and it is modeled after rescue situations faced by mountain explorers all over the globe .  Teams of approximately 15 middle school and high school students  participate in the challenge and earn points by building and programming an autonomous and teleoperated robot to score points on a themed playing field. In addition, teams practice their professional engineering skills by documenting their design process as well as their business skills by fundraising and designing and marketing a team brand.  Purdue FIRST Programs is hosting the Indiana state championship tournament this year with 28 of the best FTC  teams in the region in our on campus recreational facility, the France A. Cordova Recreational Sports Center.</p>
 	</div>
 </section>
-<section id="location" class="secondary-section">
+<section id="agenda" class="secondary-section">
+	<div class="container">
+		<h1>Agenda</h1>
+		<hr />
+		<br />
+		TBA
+	</div>
+</section>
+<section id="location" class="primary-section">
 	<div class="container">
 		<h1>Location</h1>
 		<hr />
@@ -28,14 +36,6 @@ contact: "graham75@purdue.edu"
 		<hr />
 		<br />
 		<img class="floatless" src="img/FTCState2015Parking.png">
-	</div>
-</section>
-<section id="agenda" class="primary-section">
-	<div class="container">
-		<h1>Agenda</h1>
-		<hr />
-		<br />
-		TBA
 	</div>
 </section>
 <section id="sponsor" class="secondary-section">
