--- a/fll.html
+++ b/fll.html
@@ -10,7 +10,7 @@ dark: true
 		<hr class="medium-hr">
 		<br />
 		<br />
-		We sponser a fair amount of FLL Teams. Here is a list of the different teams we sponsor, and their team number.
+		We sponsor several FLL Teams. Here is a list of the different teams we sponsor.
 		<br />
 		<br />
 		<table class="team-table">
