--- a/ftc.html
+++ b/ftc.html
@@ -9,7 +9,7 @@ dark: true
 		<h1>FTC Team 10133 - Machines of Mayhem</h1>
 		<hr />
 		<br />
-		<p>Machines of Mayhem, FTC 10133, was created in August of 2015 at New Community School, a school in Lafayette, Indiana.  They have three seventh graders and one eighth grader on the team.  This year they had a lot of help to be all that they are. They are mentored by the students of another local FIRST Team, FRC 1747; local FRC mentors; and PFP's own mentors.</p>
+		<p>Machines of Mayhem, FTC 10133, was created in August of 2015 at New Community School, a school in Lafayette, Indiana. They are mentored by the students of another local FIRST Team, FRC 1747, local FRC mentors, and PFP's own mentors.</p>
 	</div>
 </section>
 <section class="primary-section">
@@ -17,6 +17,6 @@ dark: true
 		<h1>FTC Team 8272 - CC Sparks</h1>
 		<hr />
 		<br />
-		<p>They are a team based out of Central Catholic High School. They are a very new team with few resources and only younger students. But we are very dedicated to try to help support their team's growth and they are very decdicated to their team.</p>
+		<p>They are a team based out of Central Catholic High School. We are very dedicated to support their team's growth.</p>
 	</div>
 </section>
