--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ contact: "president@purduefirst.org"
 		<hr class="medium-hr">
 		<br />
 		<p>Purdue FIRST Programs (PFP) is a student organization and class that is based at Purdue University in West Lafayette, Indiana. It is a group composed of approximately 90 students who work together to support the mission and vision of FIRST, primarily through mentoring students in the surrounding Lafayette and West Lafayette communities.</p>
-		<p>Currently, Purdue FIRST Programs supports almost 30 elementary and middle school First Lego League and First Tech Chanllenge teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a First Tech Challenge competition, a spring competition for First Lego League teams, and the Boilermaker Regional Competition for FIRST Robotics Competition teams. In addition, PFP also participates in other outreach events throughout the year on campus and in the community.</p>
+		<p>Currently, Purdue FIRST Programs supports almost 30 elementary and middle school FIRST Lego League and FIRST Tech Chanllenge teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a FIRST Tech Challenge competition, a spring competition for FIRST Lego League teams, and the Boilermaker Regional Competition for FIRST Robotics Competition teams. In addition, PFP also participates in other outreach events throughout the year on campus and in the community.</p>
 	</div>
 </section>
 <section id="our-teams" class="secondary-section">
