content changes, layout changes, add logo floating by team description

--- a/fll.html
+++ b/fll.html
@@ -10,7 +10,7 @@ dark: true
 		<hr class="medium-hr">
 		<br />
 		<br />
-		We sponsor several FLL Teams. Here is a list of the different teams we sponsor.
+		Purdue FIRST Programs is proud to sponsor several FLL teams, listed below
 		<br />
 		<br />
 		<table class="team-table">
