--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ mission-title: "Mission Statement"
 mission-summary: "Purdue FIRST Programs inspires in youth and their communities an appreciation of science and technology, while developing life skills, passion, and leadership through mentoring and hands-on activities that provide opportunities for personal growth."
 image: "crossroads-2014.jpg"
 contact: "president@purduefirst.org"
+dark: true
 ---
 <section id="about" class="primary-section">
 	<div class="container">
@@ -15,7 +16,7 @@ contact: "president@purduefirst.org"
 		<p>Currently, Purdue FIRST Programs supports almost 30 elementary and middle school FIRST Lego League and FIRST Tech Chanllenge teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a FIRST Tech Challenge competition, a spring competition for FIRST Lego League teams, and an offseason competition for FRC teams. In addition, PFP also participates in outreach events throughout the year on campus and in the community.</p>
 	</div>
 </section>
-<section id="our-teams" class="secondary-section">
+<section id="our-teams" class="primary-section">
 	<div class="container">
 		<h1>Leadership Class</h1>
 		<hr class="medium-hr">
