--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -23,21 +23,21 @@ dark: true
 		<hr />
 		<pre>
 Friday September 16th
-2:00 - 7:30PM Check In (Location TBA - perhaps stewart center from 2-6, then in the armory)
-5:30 - 7:30PM Pits Open for Robot Drop Off ONLY
+2:00 - 7:30PM Check In
+5:30 - 7:30PM Pits Open (Robot Drop Off ONLY)
 
-2:30- 2:45 Event Introduction - Stewart Center (Tentative)
-3:00-5:00 PM - General Purdue Info Sessions, Major Specific Info Sessions, Club and College Fair (Schedule to come) - Stewart Center (Tentative)
+2:30 - 2:45 Event Introduction
+3:00 - 5:00 PM - General Purdue Info Sessions, Major Specific Info Sessions, Club and College Fair
 5:00 - 6:00PM - Campus Tour
-6:00 - 7:30PM - Dinner at Ford Dining Court (Tentative)
-7:45 - 8:30 PM -Opening Ceremonies - Armory
+6:00 - 7:30PM - Dinner
+7:45 - 8:30 PM - Opening Ceremonies
 8:30 - 9:30 PM- Evening Social Activity
 
 Saturday, September 17th
-8:00-11:30AM - Qualification Matches
-11:30AM - 1PM - Lunch
-1PM - 1:30 PM - Alliance Selection
-1:40 - 5:30 - Tournament Matches
+8:00 - 11:30 AM - Qualification Matches
+11:30 AM - 1:00 PM - Lunch
+1:00 - 1:30 PM - Alliance Selection
+1:40 - 5:30 PM - Tournament Matches
 6:00 - 6:45 PM Awards and Closing Ceremonies
 		</pre>
 </section>
