makes schedul pretty

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -21,23 +21,136 @@ dark: true
 	<div class="container">
 		<h1>Schedule</h1>
 		<hr />
-		<pre>
-Friday September 16th
-2:00 - 7:30PM Check In
-5:30 - 7:30PM Pits Open (Robot Drop Off ONLY)
+		<h2>Friday September 16th</h2>
+		<div class="table-responsive">
+			<table class="table">
+				<tr>
+					<th>
+						Time
+					</th>
+					<th>
+						Event
+					</th>
+				</tr>
+				<tr>
+					<td>
+						2:00 - 7:30 PM
+					</td>
+					<td>
+						Check In
+					</td>
+				</tr>
+				<tr>
+					<td>
+						5:30 - 7:30 PM
+					</td>
+					<td>
+						Pits Open (Robot Drop Off ONLY)
+					</td>
+				</tr>
+				<tr>
+					<td>
+						2:30 - 2:45 PM
+					</td>
+					<td>
+						Event Introduction
+					</td>
+				</tr>
+				<tr>
+					<td>
+						3:00 - 5:00 PM
+					</td>
+					<td>
+						General Purdue Info Sessions, Major Specific Info Sessions, Club and College Fair
+					</td>
+				</tr>
+				<tr>
+					<td>
+						5:00 - 6:00PM
+					</td>
+					<td>
+						Campus Tour
+					</td>
+				</tr>
+				<tr>
+					<td>
+						6:00 - 7:30PM
+					</td>
+					<td>
+						Dinner
+					</td>
+				</tr>
+				<tr>
+					<td>
+						7:45 - 8:30 PM
+					</td>
+					<td>
+						Opening Ceremonies
+					</td>
+				</tr>
+				<tr>
+					<td>
+						8:30 - 9:30 PM
+					</td>
+					<td>
+						Evening Social Activity
+					</td>
+				</tr>
+			</table>
+		</div>
 
-2:30 - 2:45 Event Introduction
-3:00 - 5:00 PM - General Purdue Info Sessions, Major Specific Info Sessions, Club and College Fair
-5:00 - 6:00PM - Campus Tour
-6:00 - 7:30PM - Dinner
-7:45 - 8:30 PM - Opening Ceremonies
-8:30 - 9:30 PM- Evening Social Activity
-
-Saturday, September 17th
-8:00 - 11:30 AM - Qualification Matches
-11:30 AM - 1:00 PM - Lunch
-1:00 - 1:30 PM - Alliance Selection
-1:40 - 5:30 PM - Tournament Matches
-6:00 - 6:45 PM Awards and Closing Ceremonies
-		</pre>
+		<h2>Saturday, September 17th</h2>
+		<div class="table-responsive">
+			<table class="table">
+				<tr>
+					<th>
+						Time
+					</th>
+					<th>
+						Event
+					</th>
+				</tr>
+				<tr>
+					<td>
+						8:00 - 11:30 AM
+					</td>
+					<td>
+						Qualification Matches
+					</td>
+				</tr>
+				<tr>
+					<td>
+						11:30 AM - 1:00 PM
+					</td>
+					<td>
+						Lunch
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1:00 - 1:30 PM
+					</td>
+					<td>
+						Alliance Selection
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1:40 - 5:30 PM
+					</td>
+					<td>
+						Tournament Matches
+					</td>
+				</tr>
+				<tr>
+					<td>
+						6:00 - 6:45 PM
+					</td>
+					<td>
+						Awards and Closing Ceremonies
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
 </section>
