ux update for BBB

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -17,6 +17,16 @@ dark: true
 		Purdue FIRST Programs is hosting the first ever FRC off season event held at Purdue University: Boiler Bot Battle. We invite FRC teams from across the country to participate in a weekend of robots and college information on Purdue University's main West Lafayette campus. Subscribe to the mailing list with the link above to stay informed as event information is released.
 	</div>
 </section>
+<section id="location" class="primary-section">
+	<div class="container">
+		<h1>Location</h1>
+		<hr />
+		<br />
+		<div class="center">
+			<iframe src="https://www.google.com/maps/embed/v1/place?q=812+3rd+Street,+West+Lafayette,+IN+47907,+United+States&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+		</div>
+	</div>
+</section>
 <section id="schedule" class="primary-section">
 	<div class="container">
 		<h1>Schedule</h1>
@@ -98,7 +108,6 @@ dark: true
 				</tr>
 			</table>
 		</div>
-
 		<h2>Saturday, September 17th</h2>
 		<div class="table-responsive">
 			<table class="table">
