makes the mailing list button work

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -6,8 +6,8 @@ event-date: "September 16th-17th"
 event-year: "2016"
 location: " 812 3rd street, West Lafayette, IN 47906"
 location-ntrl: "The Purdue Armory"
-link: "#"
-contact: "graham75@purdue.edu"
+link: "http://eepurl.com/b7lG-H"
+contact: "boilerbotbash@lists.purdue.edu"
 dark: true
 ---
 <section id="about" class="primary-section">
