--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -14,7 +14,7 @@ dark: true
 	<div class="container">
 		<h1>About</h1>
 		<hr />
-		Purdue FIRST Programs is hosting the first ever FRC off season event held at Purdue University: Boiler Bot Battle. We invite FRC teams from across the country to participate in a weekend of robots and college information on Purdue University's main West Lafayette campus. Subscribe to the mailing list with the link above to stay informed as event information is released.
+		Be a part of the inaugural Boiler Bot Battle, hosted at Purdue University by the Purdue FIRST Programs. Join us at the Purdue Armory on September 16th and 17th for robots, Purdue information sessions, campus tours, social networking events, and much more. Check back to this page for frequent updates, and we hope to see you in September! Subscribe to the mailing list with the link above to stay informed as event information is released.
 	</div>
 </section>
 <section id="location" class="primary-section">
