updated event details

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -163,3 +163,77 @@ dark: true
 		</div>
 	</div>
 </section>
+<section id="parking" class="primary-section">
+	<div class="container">
+		<h1>Parking Info</h1>
+		<hr />
+		<pre>
+Friday afternoon until 5pm
+Grant Street Parking Garage
+
+Across from Purdue Memorial Union - 101
+ N Grant St, West Lafayette, IN 47906
+
+0-30 Minutes $1.00
+30-60 Minutes $3.00
+Each Additional Hour $1.00
+Maximum Per Day $10.00
+		</pre>
+		<pre>
+Friday after 5pm and All Day Saturday
+University Street Parking Garage
+Across from Lawson Computer Science Building - 250 N University St, West Lafayette, IN 47906
+
+Free
+		</pre>
+	</div>
+</section>
+<section id="travel" class="primary-section">
+	<div class="container">
+		<h1>Travel Info</h1>
+		<hr />
+		<h2>Hotels</h2>
+		<pre>
+Union Club Hotel
+101 N. Grant Street
+West Lafayette, IN 47906
+$110 per night
+
+Campus Inn
+200 Brown Street
+West Lafayette, IN 47906
+$150
+
+Hilton Garden Inn
+356 E. State Street
+West Lafayette, IN 47906
+$200
+
+Holiday Inn
+515 South Street
+Lafayette, IN 47901
+$200
+
+Quality Inn and Suites
+4221 State Road 26 E
+Lafayette, IN 47905
+$75
+		</pre>
+	</div>
+</section>
+<section id="sponsors" class="primary-section">
+	<div class="container">
+		<h1>Sponsors</h1>
+		<hr />
+		Thanks to all our wonderful sponsors!
+		<pre>
+Dept. of Chemical Engineering
+Dept. of Electrical and Computer Engineering
+College of Engineering
+Dept. of Mechanical Engineering
+College of Science
+Polytechnic Institute
+Ag-Bio Medical
+		</pre>
+	</div>
+</section>
