registration goes live!!!

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -6,7 +6,7 @@ event-date: "September 16th-17th"
 event-year: "2016"
 location: " 812 3rd street, West Lafayette, IN 47906"
 location-ntrl: "The Purdue Armory"
-link: "http://eepurl.com/b7lG-H"
+link: "http://www.conf.purdue.edu/boilerbot"
 contact: "boilerbotbash@lists.purdue.edu"
 dark: true
 ---
@@ -14,7 +14,10 @@ dark: true
 	<div class="container">
 		<h1>About</h1>
 		<hr />
-		Be a part of the inaugural Boiler Bot Battle, hosted at Purdue University by the Purdue FIRST Programs. Join us at the Purdue Armory on September 16th and 17th for robots, Purdue information sessions, campus tours, social networking events, and much more. Check back to this page for frequent updates, and we hope to see you in September! Subscribe to the mailing list with the link above to stay informed as event information is released.
+		Be a part of the inaugural Boiler Bot Battle, hosted at Purdue University by the Purdue FIRST Programs. Join us at the Purdue Armory on September 16th and 17th for robots, Purdue information sessions, campus tours, social networking events, and much more. Check back to this page for frequent updates, and we hope to see you in September! <a href="http://eepurl.com/b7lG-H">Subscribe to the mailing list to stay informed as event information is released.</a>
+		<h2>Aid Opportunities</h2>
+		<hr />
+		The Dept. of Science of Purdue University has made a travel grant available for some teams who wouldn't be capable of attending the event otherwise. The application is available <a href="https://docs.google.com/document/d/11Xo3jWw81OSLfXU-j9F4Ob68ohIC5LCUiSGaWpY9lhc/">here</a>. Email the completed form to <a href="mailto:gatesh@purdue.edu">gatesh@purdue.edu</a>
 	</div>
 </section>
 <section id="location" class="primary-section">
