--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -16,7 +16,8 @@ dark: true
 		<hr />
 		Be a part of the inaugural Boiler Bot Battle, hosted at Purdue University by the Purdue FIRST Programs. Join us at the Purdue Armory on September 16th and 17th for robots, Purdue information sessions, campus tours, social networking events, and much more. Check back to this page for frequent updates, and we hope to see you in September! <a href="http://eepurl.com/b7lG-H">Subscribe to the mailing list to stay informed as event information is released.</a>
 		<h2>Aid Opportunities</h2>
-		<hr />
+		<hr class="medium-hr thin" />
+		<br />
 		The Dept. of Science of Purdue University has made a travel grant available for some teams who wouldn't be capable of attending the event otherwise. The application is available <a href="https://docs.google.com/document/d/11Xo3jWw81OSLfXU-j9F4Ob68ohIC5LCUiSGaWpY9lhc/">here</a>. Email the completed form to <a href="mailto:gatesh@purdue.edu">gatesh@purdue.edu</a>
 	</div>
 </section>
@@ -166,77 +167,100 @@ dark: true
 		</div>
 	</div>
 </section>
-<section id="parking" class="primary-section">
-	<div class="container">
-		<h1>Parking Info</h1>
-		<hr />
-		<pre>
-Friday afternoon until 5pm
-Grant Street Parking Garage
-
-Across from Purdue Memorial Union - 101
- N Grant St, West Lafayette, IN 47906
-
-0-30 Minutes $1.00
-30-60 Minutes $3.00
-Each Additional Hour $1.00
-Maximum Per Day $10.00
-		</pre>
-		<pre>
-Friday after 5pm and All Day Saturday
-University Street Parking Garage
-Across from Lawson Computer Science Building - 250 N University St, West Lafayette, IN 47906
-
-Free
-		</pre>
-	</div>
-</section>
 <section id="travel" class="primary-section">
 	<div class="container">
 		<h1>Travel Info</h1>
 		<hr />
 		<h2>Hotels</h2>
-		<pre>
-Union Club Hotel
-101 N. Grant Street
-West Lafayette, IN 47906
-$110 per night
+		<hr class="medium-hr thin" />
+		<a href="https://www.union.purdue.edu/hotel/">
+			<h2>Union Club Hotel</h2>
+		</a>
+		<a href="https://www.google.com/maps/place/Union+Club+Hotel/@40.4249752,-86.9106151,15z/data=!4m2!3m1!1s0x0:0x2ef633321ea116be?sa=X&ved=0ahUKEwjv5o3f6LTOAhXC7iYKHQcnA7QQ_BIIdzAM">
+			101 N. Grant Street<br />
+			West Lafayette, IN 47906<br />
+		</a>
+		$110 per night
 
-Campus Inn
-200 Brown Street
-West Lafayette, IN 47906
-$150
+		<a href="http://www.campusinnatpurdue.com/ ">
+			<h2>Campus Inn</h2>
+		</a>
+		<a href="https://www.google.com/maps/place/Campus+Inn/@40.4225915,-86.9035825,15z/data=!4m5!3m4!1s0x0:0x90ccf024e4c0b2de!8m2!3d40.4225915!4d-86.9035825 ">
+			200 Brown Street<br />
+			West Lafayette, IN 47906<br />
+		</a>
+		$150
 
-Hilton Garden Inn
-356 E. State Street
-West Lafayette, IN 47906
-$200
+		<a href="http://hiltongardeninn3.hilton.com/en/hotels/indiana/hilton-garden-inn-west-lafayette-wabash-landing-LAFWLGI/index.html ">
+			<h2>Hilton Garden Inn</h2>
+		</a>
+		<a href="https://www.google.com/maps/place/Hilton+Garden+Inn+West+Lafayette+Wabash+Landing/@40.4206112,-86.8999899,15z/data=!4m5!3m4!1s0x0:0x383bb5601b2602f8!8m2!3d40.4206112!4d-86.8999899 ">
+			356 E. State Street<br />
+			West Lafayette, IN 47906<br />
+		</a>
+		$200
 
-Holiday Inn
-515 South Street
-Lafayette, IN 47901
-$200
+		<a href="https://www.ihg.com/holidayinn/hotels/us/en/lafayette/lafin/hoteldetail?cm_mmc=GoogleMaps-_-HI-_-USA-_-LAFIN ">
+			<h2>Holiday Inn</h2>
+		</a>
+		<a href="https://www.google.com/maps/place/Holiday+Inn+Lafayette-City+Centre/@40.416804,-86.891235,15z/data=!4m5!3m4!1s0x0:0x94a942f7968db3f9!8m2!3d40.416804!4d-86.891235 ">
+			515 South Street<br />
+			Lafayette, IN 47901<br />
+		</a>
+		$200
 
-Quality Inn and Suites
-4221 State Road 26 E
-Lafayette, IN 47905
-$75
-		</pre>
+		<a href="https://www.choicehotels.com/indiana/lafayette/quality-inn-hotels/in267?source=gyxt ">
+			<h2>Quality Inn and Suites</h2>
+		</a>
+		<a href="https://www.google.com/maps/place/Quality+Inn+%26+Suites/@40.415864,-86.82668,15z/data=!4m5!3m4!1s0x0:0xf3a74bacc07aa4a3!8m2!3d40.415864!4d-86.82668">
+			4221 State Road 26 E<br />
+			Lafayette, IN 47905<br />
+		</a>
+		$75
+		<h2>Parking Info</h2>
+		<hr class="medium-hr thin"/>
+		<a href="http://www.admissions.purdue.edu/visit/parkinggrant.php">
+			<h2>Grant Street Parking Garage</h2>
+		</a>
+
+		Friday afternoon until 5pm <br />
+		Across from Purdue Memorial Union
+		<a href="https://www.google.com/maps/place/Grant+Street+Parking+Garage/@40.4252203,-86.9097298,15z/data=!4m5!3m4!1s0x0:0xc6e6b582ce35d3e2!8m2!3d40.4252203!4d-86.9097298 ">
+		   101 N Grant St, West Lafayette, IN 47906
+		</a>
+		<br />
+		<br />
+
+		0-30 Minutes $1.00 <br />
+		30-60 Minutes $3.00 <br />
+		Each Additional Hour $1.00 <br />
+		Maximum Per Day $10.00
+		<a href="http://www.admissions.purdue.edu/visit/parkinguniversity.php ">
+			<h2>University Street Parking Garage</h2>
+		</a>
+		Friday after 5pm and All Day Saturday <br />
+
+		Across from Lawson Computer Science Building
+		<a href="https://www.google.com/maps/place/University+Street+Parking+Garage,+West+Lafayette,+IN+47907/@40.4269834,-86.9194704,17z/data=!3m1!4b1!4m5!3m4!1s0x8812e2b3f593256f:0x70bcd1cf296e5c71!8m2!3d40.4269801!4d-86.9172544 ">
+			250 N University St, West Lafayette, IN 47906
+		</a>
+		<br />
+		<br />
+		Free
 	</div>
 </section>
 <section id="sponsors" class="primary-section">
 	<div class="container">
 		<h1>Sponsors</h1>
 		<hr />
-		Thanks to all our wonderful sponsors!
-		<pre>
-Dept. of Chemical Engineering
-Dept. of Electrical and Computer Engineering
-College of Engineering
-Dept. of Mechanical Engineering
-College of Science
-Polytechnic Institute
-Ag-Bio Medical
-		</pre>
+		Thanks to all our wonderful sponsors! <br />
+		Dept. of Chemical Engineering <br />
+		Dept. of Electrical and Computer Engineering <br />
+		College of Engineering <br />
+		Dept. of Mechanical Engineering <br />
+		College of Science <br />
+		Polytechnic Institute <br />
+		Dept. of Agricultural and Biological Engineering <br />
+		Dept. of Civil Engineering <br />
 	</div>
 </section>
