--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -19,6 +19,10 @@ dark: true
 		<hr class="medium-hr thin" />
 		<br />
 		The Dept. of Science of Purdue University has made a travel grant available for some teams who wouldn't be capable of attending the event otherwise. The application is available <a href="https://docs.google.com/document/d/11Xo3jWw81OSLfXU-j9F4Ob68ohIC5LCUiSGaWpY9lhc/">here</a>. Email the completed form to <a href="mailto:gatesh@purdue.edu">gatesh@purdue.edu</a>
+		<h2>Lunch</h2>
+		<hr class="medium-hr thin" />
+		<br />
+		Lunch will be available for purchase onsite at the Armory from Subway and Arnie's (tentative).
 	</div>
 </section>
 <section id="location" class="primary-section">
