updated content, yt video

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -14,6 +14,9 @@ dark: true
 	<div class="container">
 		<h1>About</h1>
 		<hr />
+		<iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/UemgTq5iEEQ" frameborder="0"></iframe>
+		<br />
+		<br />
 		Be a part of the inaugural Boiler Bot Battle, hosted at Purdue University by the Purdue FIRST Programs. Join us at the Purdue Armory on September 16th and 17th for robots, Purdue information sessions, campus tours, social networking events, and much more. Check back to this page for frequent updates, and we hope to see you in September! <a href="http://eepurl.com/b7lG-H">Subscribe to the mailing list to stay informed as event information is released.</a>
 		<h2>Aid Opportunities</h2>
 		<hr class="medium-hr thin" />
