made sponsor tiers, changed image

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -1,6 +1,6 @@
 ---
 layout: event-image
-image: crossroads-2014-1.jpg
+image: state-2016.jpg
 title: "Boiler Bot Battle"
 event-date: "September 16th-17th"
 event-year: "2016"
@@ -260,14 +260,18 @@ dark: true
 	<div class="container">
 		<h1>Sponsors</h1>
 		<hr />
-		Thanks to all our wonderful sponsors! <br />
-		Dept. of Chemical Engineering <br />
-		Dept. of Electrical and Computer Engineering <br />
-		College of Engineering <br />
-		Dept. of Mechanical Engineering <br />
+		<h2>Diamond Partners</h2>
 		College of Science <br />
-		Polytechnic Institute <br />
-		Dept. of Agricultural and Biological Engineering <br />
+		College of Engineering <br />
+		<h2>Platinum Partners</h2>
+		Dept. of Mechanical Engineering <br />
 		Dept. of Civil Engineering <br />
+		<h2>Gold Partners</h2>
+		Polytechnic Institute <br />
+		<h2>Bronze Partners</h2>
+		Dept. of Agricultural and Biological Engineering <br />
+		Dept. of Electrical and Computer Engineering <br />
+		<h2>Thanks To</h2>
+		Dept. of Chemical Engineering <br />
 	</div>
 </section>
