--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -25,7 +25,7 @@ dark: true
 		<h2>Lunch</h2>
 		<hr class="medium-hr thin" />
 		<br />
-		Lunch will be available for purchase onsite at the Armory from Subway and Arnie's (tentative).
+		Lunch will be available for purchase onsite at the Armory from Subway.
 	</div>
 </section>
 <section id="location" class="primary-section">
@@ -74,7 +74,7 @@ dark: true
 						3:00 - 5:00 PM
 					</td>
 					<td>
-						General Purdue Info Sessions, Major Specific Info Sessions, Club and College Fair
+						General Purdue Info Sessions and Major Specific Info Sessions
 					</td>
 				</tr>
 				<tr>
@@ -143,7 +143,7 @@ dark: true
 						11:30 AM - 1:00 PM
 					</td>
 					<td>
-						Lunch
+						Lunch and College and Club Fair
 					</td>
 				</tr>
 				<tr>
@@ -226,6 +226,14 @@ dark: true
 		$75
 		<h2>Parking Info</h2>
 		<hr class="medium-hr thin"/>
+
+		<a href="https://www.google.com/maps/place/Cherry+Ln+%26+John+R+Wooden+Dr,+West+Lafayette,+IN+47906/@40.4387327,-86.9209719,17z/data=!3m1!4b1!4m5!3m4!1s0x8812fd48e1d416c5:0x745274a21b1775a3!8m2!3d40.4387286!4d-86.9187832">
+			<h2>Bus and Trailer Parking</h2>
+		</a>
+
+		Free bus and trailer parking for Friday and Saturday will be available near the back of the stadium parking lot on the north side of campus at Cherry Lane and John Wooden Drive, West Lafayette, Indiana.
+
+
 		<a href="http://www.admissions.purdue.edu/visit/parkinggrant.php">
 			<h2>Grant Street Parking Garage</h2>
 		</a>
