--- a/fll-regional-2016.html
+++ b/fll-regional-2016.html
@@ -1,6 +1,6 @@
 ---
 layout: event-image
-title: "Purdue FLL Qualifying Tournament"
+title: "Purdue FLL Qualifier"
 event-date: "November 12"
 event-year: "2016"
 location-ntrl: "McCutcheon High School"
