--- a/fll-regional-2016.html
+++ b/fll-regional-2016.html
@@ -10,6 +10,15 @@ contact: "president@purduefirst.org"
 link: "http://www.conf.purdue.edu/FLL"
 dark: true
 ---
+<section id="about" class="primary-section">
+	<div class="container">
+		<h1>About</h1>
+		<hr />
+		<p>
+			FIRST Lego League is a robotics competition for 3rd-5th graders. Each year, FLL releases a challenge modeled after a real problem in the world. Each FLL team designs a robot, completes a project, all while promoting FIRST core values. This year’s FLL challenge is Animal AlliesSM. The challenge is about improving interactions between animals and humans. Teams design innovative solutions to not only the tasks on the field but problems in interactions between animals and humans. They will practice both engineering in their robot build as well as research and problem solving in their project. Teams also continually practice the core values of FIRST throughout the season, from building their robots to competing at events. Purdue FIRST Programs is proud to host the Purdue University FLL Qualifying Tournament with 27 teams competing at McCutcheon High School.
+		</p>
+	</div>
+</section>
 <section id="schedule" class="primary-section">
 	<div class="container">
 		<h1>Agenda</h1>
@@ -92,5 +101,21 @@ dark: true
 		<div class="center">
 			<iframe src="https://www.google.com/maps/embed/v1/place?q=4951+US-231,+Lafayette,+IN+47909&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
+	</div>
+</section>
+<section id="lunch" class="primary-section">
+	<div class="container">
+		<h1>Lunch</h1>
+		<hr />
+		<br />
+		Coming soon
+	</div>
+</section>
+<section id="sponsors" class="primary-section">
+	<div class="container">
+		<h1>Sponsors</h1>
+		<hr />
+		<br />
+		Coming soon
 	</div>
 </section>
