--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -2,284 +2,34 @@
 layout: event-image
 image: state-2016.jpg
 title: "Boiler Bot Battle"
-event-date: "September 16th-17th"
-event-year: "2016"
+event-date: "November 10th-11th"
+event-year: "2017"
 location: " 812 3rd street, West Lafayette, IN 47906"
 location-ntrl: "The Purdue Armory"
-link: "http://www.conf.purdue.edu/boilerbot"
 contact: "boilerbotbash@lists.purdue.edu"
 dark: true
 ---
 <section id="about" class="primary-section">
-	<div class="container">
-		<h1>About</h1>
-		<hr />
-		<iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/UemgTq5iEEQ" frameborder="0"></iframe>
-		<br />
-		<br />
-		Be a part of the inaugural Boiler Bot Battle, hosted at Purdue University by the Purdue FIRST Programs. Join us at the Purdue Armory on September 16th and 17th for robots, Purdue information sessions, campus tours, social networking events, and much more. Check back to this page for frequent updates, and we hope to see you in September! <a href="http://eepurl.com/b7lG-H">Subscribe to the mailing list to stay informed as event information is released.</a>
-		<h2>Aid Opportunities</h2>
-		<hr class="medium-hr thin" />
-		<br />
-		The Dept. of Science of Purdue University has made a travel grant available for some teams who wouldn't be capable of attending the event otherwise. The application is available <a href="https://docs.google.com/document/d/11Xo3jWw81OSLfXU-j9F4Ob68ohIC5LCUiSGaWpY9lhc/">here</a>. Email the completed form to <a href="mailto:gatesh@purdue.edu">gatesh@purdue.edu</a>
-		<h2>Lunch</h2>
-		<hr class="medium-hr thin" />
-		<br />
-		Lunch will be available for purchase onsite at the Armory from Subway.
-	</div>
+    <div class="container">
+        <h1>About</h1>
+        <hr />
+        <iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/UemgTq5iEEQ" frameborder="0"></iframe>
+        <br />
+        <br />
+        Be a part of the second Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Armory on November 10th and 11th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in November! <a href="http://eepurl.com/b7lG-H">Subscribe to the mailing list to stay informed as event information is released.</a>
+        <h2>Aid Opportunities</h2>
+        <hr class="medium-hr thin" />
+        <br />
+        The Department of Science at Purdue University has made a travel grant available to teams who wouldn't be capable of attending the event due to travel costs. More information and an application to come. <a href="https://docs.google.com/document/d/11Xo3jWw81OSLfXU-j9F4Ob68ohIC5LCUiSGaWpY9lhc/">here</a>. Email the completed form to <a href="mailto:gatesh@purdue.edu">gatesh@purdue.edu</a>
+    </div>
 </section>
 <section id="location" class="primary-section">
-	<div class="container">
-		<h1>Location</h1>
-		<hr />
-		<br />
-		<div class="center">
-			<iframe src="https://www.google.com/maps/embed/v1/place?q=812+3rd+Street,+West+Lafayette,+IN+47907,+United+States&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-		</div>
-	</div>
-</section>
-<section id="schedule" class="primary-section">
-	<div class="container">
-		<h1>Schedule</h1>
-		<hr />
-		<h2>Friday September 16th</h2>
-		<div class="table-responsive">
-			<table class="table">
-				<tr>
-					<th>
-						Time
-					</th>
-					<th>
-						Event
-					</th>
-				</tr>
-				<tr>
-					<td>
-						2:00 - 7:30 PM
-					</td>
-					<td>
-						Check In
-					</td>
-				</tr>
-				<tr>
-					<td>
-						2:30 - 2:45 PM
-					</td>
-					<td>
-						Event Introduction
-					</td>
-				</tr>
-				<tr>
-					<td>
-						3:00 - 5:00 PM
-					</td>
-					<td>
-						General Purdue Info Sessions and Major Specific Info Sessions
-					</td>
-				</tr>
-				<tr>
-					<td>
-						5:00 - 6:00PM
-					</td>
-					<td>
-						Campus Tour
-					</td>
-				</tr>
-				<tr>
-					<td>
-						5:30 - 7:30 PM
-					</td>
-					<td>
-						Pits Open (Robot Drop Off ONLY)
-					</td>
-				</tr>
-				<tr>
-					<td>
-						6:00 - 7:30PM
-					</td>
-					<td>
-						Dinner
-					</td>
-				</tr>
-				<tr>
-					<td>
-						7:45 - 8:30 PM
-					</td>
-					<td>
-						Opening Ceremonies
-					</td>
-				</tr>
-				<tr>
-					<td>
-						8:30 - 9:30 PM
-					</td>
-					<td>
-						Evening Social Activity
-					</td>
-				</tr>
-			</table>
-		</div>
-		<h2>Saturday, September 17th</h2>
-		<div class="table-responsive">
-			<table class="table">
-				<tr>
-					<th>
-						Time
-					</th>
-					<th>
-						Event
-					</th>
-				</tr>
-				<tr>
-					<td>
-						8:00 - 11:30 AM
-					</td>
-					<td>
-						Qualification Matches
-					</td>
-				</tr>
-				<tr>
-					<td>
-						11:30 AM - 1:00 PM
-					</td>
-					<td>
-						Lunch and College and Club Fair
-					</td>
-				</tr>
-				<tr>
-					<td>
-						1:00 - 1:30 PM
-					</td>
-					<td>
-						Alliance Selection
-					</td>
-				</tr>
-				<tr>
-					<td>
-						1:40 - 5:30 PM
-					</td>
-					<td>
-						Tournament Matches
-					</td>
-				</tr>
-				<tr>
-					<td>
-						6:00 - 6:45 PM
-					</td>
-					<td>
-						Awards and Closing Ceremonies
-					</td>
-				</tr>
-			</table>
-		</div>
-	</div>
-</section>
-<section id="travel" class="primary-section">
-	<div class="container">
-		<h1>Travel Info</h1>
-		<hr />
-		<h2>Hotels</h2>
-		<hr class="medium-hr thin" />
-		<a href="https://www.union.purdue.edu/hotel/">
-			<h2>Union Club Hotel</h2>
-		</a>
-		<a href="https://www.google.com/maps/place/Union+Club+Hotel/@40.4249752,-86.9106151,15z/data=!4m2!3m1!1s0x0:0x2ef633321ea116be?sa=X&ved=0ahUKEwjv5o3f6LTOAhXC7iYKHQcnA7QQ_BIIdzAM">
-			101 N. Grant Street<br />
-			West Lafayette, IN 47906<br />
-		</a>
-		$110 per night
-
-		<a href="http://www.campusinnatpurdue.com/ ">
-			<h2>Campus Inn</h2>
-		</a>
-		<a href="https://www.google.com/maps/place/Campus+Inn/@40.4225915,-86.9035825,15z/data=!4m5!3m4!1s0x0:0x90ccf024e4c0b2de!8m2!3d40.4225915!4d-86.9035825 ">
-			200 Brown Street<br />
-			West Lafayette, IN 47906<br />
-		</a>
-		$150
-
-		<a href="http://hiltongardeninn3.hilton.com/en/hotels/indiana/hilton-garden-inn-west-lafayette-wabash-landing-LAFWLGI/index.html ">
-			<h2>Hilton Garden Inn</h2>
-		</a>
-		<a href="https://www.google.com/maps/place/Hilton+Garden+Inn+West+Lafayette+Wabash+Landing/@40.4206112,-86.8999899,15z/data=!4m5!3m4!1s0x0:0x383bb5601b2602f8!8m2!3d40.4206112!4d-86.8999899 ">
-			356 E. State Street<br />
-			West Lafayette, IN 47906<br />
-		</a>
-		$200
-
-		<a href="https://www.ihg.com/holidayinn/hotels/us/en/lafayette/lafin/hoteldetail?cm_mmc=GoogleMaps-_-HI-_-USA-_-LAFIN ">
-			<h2>Holiday Inn</h2>
-		</a>
-		<a href="https://www.google.com/maps/place/Holiday+Inn+Lafayette-City+Centre/@40.416804,-86.891235,15z/data=!4m5!3m4!1s0x0:0x94a942f7968db3f9!8m2!3d40.416804!4d-86.891235 ">
-			515 South Street<br />
-			Lafayette, IN 47901<br />
-		</a>
-		$200
-
-		<a href="https://www.choicehotels.com/indiana/lafayette/quality-inn-hotels/in267?source=gyxt ">
-			<h2>Quality Inn and Suites</h2>
-		</a>
-		<a href="https://www.google.com/maps/place/Quality+Inn+%26+Suites/@40.415864,-86.82668,15z/data=!4m5!3m4!1s0x0:0xf3a74bacc07aa4a3!8m2!3d40.415864!4d-86.82668">
-			4221 State Road 26 E<br />
-			Lafayette, IN 47905<br />
-		</a>
-		$75
-		<h2>Parking Info</h2>
-		<hr class="medium-hr thin"/>
-
-		<a href="https://www.google.com/maps/place/Cherry+Ln+%26+John+R+Wooden+Dr,+West+Lafayette,+IN+47906/@40.4387327,-86.9209719,17z/data=!3m1!4b1!4m5!3m4!1s0x8812fd48e1d416c5:0x745274a21b1775a3!8m2!3d40.4387286!4d-86.9187832">
-			<h2>Bus and Trailer Parking</h2>
-		</a>
-
-		Free bus and trailer parking for Friday and Saturday will be available near the back of the stadium parking lot on the north side of campus at Cherry Lane and John Wooden Drive, West Lafayette, Indiana.
-
-
-		<a href="http://www.admissions.purdue.edu/visit/parkinggrant.php">
-			<h2>Grant Street Parking Garage</h2>
-		</a>
-
-		Friday afternoon until 5pm <br />
-		Across from Purdue Memorial Union
-		<a href="https://www.google.com/maps/place/Grant+Street+Parking+Garage/@40.4252203,-86.9097298,15z/data=!4m5!3m4!1s0x0:0xc6e6b582ce35d3e2!8m2!3d40.4252203!4d-86.9097298 ">
-		   101 N Grant St, West Lafayette, IN 47906
-		</a>
-		<br />
-		<br />
-
-		0-30 Minutes $1.00 <br />
-		30-60 Minutes $3.00 <br />
-		Each Additional Hour $1.00 <br />
-		Maximum Per Day $10.00
-		<a href="http://www.admissions.purdue.edu/visit/parkinguniversity.php ">
-			<h2>University Street Parking Garage</h2>
-		</a>
-		Friday after 5pm and All Day Saturday <br />
-
-		Across from Lawson Computer Science Building
-		<a href="https://www.google.com/maps/place/University+Street+Parking+Garage,+West+Lafayette,+IN+47907/@40.4269834,-86.9194704,17z/data=!3m1!4b1!4m5!3m4!1s0x8812e2b3f593256f:0x70bcd1cf296e5c71!8m2!3d40.4269801!4d-86.9172544 ">
-			250 N University St, West Lafayette, IN 47906
-		</a>
-		<br />
-		<br />
-		Free
-	</div>
-</section>
-<section id="sponsors" class="primary-section">
-	<div class="container">
-		<h1>Sponsors</h1>
-		<hr />
-		<h2>Diamond Partners</h2>
-		College of Science <br />
-		College of Engineering <br />
-		<h2>Platinum Partners</h2>
-		Dept. of Mechanical Engineering <br />
-		Dept. of Civil Engineering <br />
-		<h2>Gold Partners</h2>
-		Polytechnic Institute <br />
-		<h2>Bronze Partners</h2>
-		Dept. of Agricultural and Biological Engineering <br />
-		Dept. of Electrical and Computer Engineering <br />
-		<h2>Thanks To</h2>
-		Dept. of Chemical Engineering <br />
-	</div>
+    <div class="container">
+        <h1>Location</h1>
+        <hr />
+        <br />
+        <div class="center">
+            <iframe src="https://www.google.com/maps/embed/v1/place?q=812+3rd+Street,+West+Lafayette,+IN+47907,+United+States&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+    </div>
 </section>
