added registration, schedule and team social to b3 page

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -5,6 +5,7 @@ title: "Boiler Bot Battle"
 event-date: "November 10th-11th"
 event-year: "2017"
 location: " 812 3rd street, West Lafayette, IN 47906"
+link: https://docs.google.com/forms/d/e/1FAIpQLSdzsGa0Q6C-R2ZvMiyeLN2ehOOzG0ByOB5wrfkTXPuVGVSyMA/viewform
 location-ntrl: "The Purdue Armory"
 contact: "boilerbotbash@lists.purdue.edu"
 dark: true
@@ -21,6 +22,45 @@ dark: true
         <hr class="medium-hr thin" />
         <br />
         The Department of Science at Purdue University has made a travel grant available to teams who wouldn't be capable of attending the event due to travel costs. More information and an application to come. <a href="https://docs.google.com/document/d/11Xo3jWw81OSLfXU-j9F4Ob68ohIC5LCUiSGaWpY9lhc/">here</a>. Email the completed form to <a href="mailto:gatesh@purdue.edu">gatesh@purdue.edu</a>
+        <h2>Schedule (Subject to change)</h2>
+        <hr class="medium-hr thin" />
+        <br />
+
+        <b>Friday November 10th</b>
+        <br />
+        3:00-6:00pm Venue open for robot load in and practice rounds
+        <br />
+        6:00pm-11:00pm Team Social
+        <br />
+        <b>Saturday, September 17th</b>
+        <br />
+        8:00-8:30am Opening Ceremonies
+        <br />
+        8:30-11:30am Qualification Matches
+        <br />
+        <br />
+        11:30am-1:00pm Lunch
+        <br />
+        1:00-1:30pm Alliance Selection
+        <br />
+        1:40-5:30pm Elimination Matches
+        <br />
+        6:00pm-6:45pm Awards and Closing Ceremonies
+        
+        <h2>Team Social</h2>
+        <hr class="medium-hr thin" />
+        <br />
+        The team social will take place on Friday, November 11th from 6:00-10:00pm. The social will cost $7.50 per person attending and will include...
+        <br />
+        - Bowling
+        <br />
+        - Pool (Billiards)
+        <br />
+        - Board Games
+        <br />
+        - A $10 meal ticket for dinner at a Purdue Memorial Union restaurant
+        <br />
+        - Fun for all!
     </div>
 </section>
 <section id="location" class="primary-section">
