updated b3 page for team social and changed layout to include break between location name and location address

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -50,7 +50,7 @@ dark: true
         <h2>Team Social</h2>
         <hr class="medium-hr thin" />
         <br />
-        The team social will take place on Friday, November 11th from 6:00-10:00pm. The social will cost $7.50 per person attending and will include...
+        The team social will take place on Friday, November 11th from 6:00-10:00pm. The social will cost $5 per person attending and will include...
         <br />
         - Bowling
         <br />
@@ -59,6 +59,8 @@ dark: true
         - Board Games
         <br />
         - A $10 meal ticket for dinner at a Purdue Memorial Union restaurant
+        <br />
+        - Campus tours
         <br />
         - Fun for all!
     </div>
