--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -7,7 +7,7 @@ event-year: "2017"
 location: " 812 3rd street, West Lafayette, IN 47906"
 link: https://docs.google.com/forms/d/e/1FAIpQLSdzsGa0Q6C-R2ZvMiyeLN2ehOOzG0ByOB5wrfkTXPuVGVSyMA/viewform
 location-ntrl: "The Purdue Armory"
-contact: "boilerbotbash@lists.purdue.edu"
+contact: "boilerbotbattle@gmail.com"
 dark: true
 ---
 <section id="about" class="primary-section">
@@ -21,9 +21,17 @@ dark: true
         <h2>Aid Opportunities</h2>
         <hr class="medium-hr thin" />
         <br />
-        The Department of Science at Purdue University has made a travel grant available to teams who wouldn't be capable of attending the event due to travel costs. More information and an application to come. <a href="https://docs.google.com/document/d/11Xo3jWw81OSLfXU-j9F4Ob68ohIC5LCUiSGaWpY9lhc/">here</a>. Email the completed form to <a href="mailto:gatesh@purdue.edu">gatesh@purdue.edu</a>
-        <h2>Schedule (Subject to change)</h2>
-        <hr class="medium-hr thin" />
+        The Department of Science at Purdue University has made a travel grant available to teams who wouldn't be capable of attending the event due to travel costs. More information and an application to come. <a href="https://docs.google.com/document/d/11Xo3jWw81OSLfXU-j9F4Ob68ohIC5LCUiSGaWpY9lhc/">here</a>. Email the completed form to <a href="mailto:gatesh@purdue.edu">gatesh@purdue.edu</a>      
+    </div>
+</section>
+        
+<section id="schedule" class="primary-section">
+<div class="container">
+        <h1>Schedule</h1>
+        <hr />
+        <br />
+        <div class="center">
+            <hr class="medium-hr thin" />
         <br />
 
         <b>Friday November 10th</b>
@@ -50,7 +58,7 @@ dark: true
         <h2>Team Social</h2>
         <hr class="medium-hr thin" />
         <br />
-        The team social will take place on Friday, November 11th from 6:00-10:00pm. The social will cost $5 per person attending and will include...
+        The team social will take place on Friday, November 11th from 6:00-10:00pm. The social will cost $7.50 per person attending and will include...
         <br />
         - Bowling
         <br />
@@ -63,15 +71,16 @@ dark: true
         - Campus tours
         <br />
         - Fun for all!
+        </div>
     </div>
-</section>
+</section>   
 <section id="location" class="primary-section">
     <div class="container">
         <h1>Location</h1>
         <hr />
         <br />
         <div class="center">
-            <iframe src="https://www.google.com/maps/embed/v1/place?q=812+3rd+Street,+West+Lafayette,+IN+47907,+United+States&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.133840719084!2d-86.91844598495103!3d40.42803516287645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b3990678b9%3A0x11dcd5ecb4889da9!2sArmory%2C+812+3rd+Street%2C+West+Lafayette%2C+IN+47907!5e0!3m2!1sen!2sus!4v1498579448341" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </div>
 </section>
