--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -17,11 +17,11 @@ dark: true
         <iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/UemgTq5iEEQ" frameborder="0"></iframe>
         <br />
         <br />
-        Be a part of the second Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Armory on November 10th and 11th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in November! <a href="http://eepurl.com/b7lG-H">Subscribe to the mailing list to stay informed as event information is released.</a>
+        Be a part of the second Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Armory on November 10th and 11th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in November! <a href="http://eepurl.com/b7lG-H">.</a>
         <h2>Aid Opportunities</h2>
         <hr class="medium-hr thin" />
         <br />
-        The Department of Science at Purdue University has made a travel grant available to teams who wouldn't be capable of attending the event due to travel costs. More information and an application to come. <a href="https://docs.google.com/document/d/11Xo3jWw81OSLfXU-j9F4Ob68ohIC5LCUiSGaWpY9lhc/">here</a>. Email the completed form to <a href="mailto:gatesh@purdue.edu">gatesh@purdue.edu</a>      
+        The Department of Science at Purdue University has made a travel grant available to teams who wouldn't be capable of attending the event due to travel costs. More information and an application to come <a href="https://docs.google.com/document/d/11Xo3jWw81OSLfXU-j9F4Ob68ohIC5LCUiSGaWpY9lhc/">here</a>. Email the completed form to <a href="mailto:gatesh@purdue.edu">gatesh@purdue.edu</a>      
     </div>
 </section>
         
@@ -38,9 +38,9 @@ dark: true
         <br />
         3:00-6:00pm Venue open for robot load in and practice rounds
         <br />
-        6:00pm-11:00pm Team Social
+        6:00pm-10:00pm Team Social
         <br />
-        <b>Saturday, September 17th</b>
+        <b>Saturday, November 11th</b>
         <br />
         8:00-8:30am Opening Ceremonies
         <br />
@@ -58,7 +58,7 @@ dark: true
         <h2>Team Social</h2>
         <hr class="medium-hr thin" />
         <br />
-        The team social will take place on Friday, November 11th from 6:00-10:00pm. The social will cost $7.50 per person attending and will include...
+        The team social will take place on Friday, November 10th from 6:00-10:00pm. The social will cost $7.50 per person attending and will include...
         <br />
         - Bowling
         <br />
