--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -20,7 +20,7 @@ dark: true
         Be a part of the second Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Armory on November 10th and 11th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in November! <a href="http://eepurl.com/b7lG-H">.</a>
     </div>
     <br>
-    <div class="center"><hr class="medium-hr thin" /></div>
+    <hr class="medium-hr thin" />
     <br>
 	Got questions about the event? Send them to <a href="mailto:boilerbotbattle@gmail.com">boilerbotbattle@gmail.com</a>!
 </section>
